<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="FragmentPreference">
    <PreferenceCategory
        android:title="@string/pref_sms_storage_title"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="check_box_key"
            android:title="@string/check_box_title"
            android:summary="@string/pref_check_summ"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_list_storage_title"
        android:key="pref_key_storage_dialog_settings">
        <EditTextPreference
            android:key="edit_text"
            android:title="Edit text preference"
            android:dialogTitle="Enter your favorite animal"
            android:summary="An example that usea an edit text dialog">
        </EditTextPreference>
        <ListPreference
            android:key="list_preference_key"
            android:summary="@string/pref_list_summ"
            android:title="@string/pref_list_title"
            android:dialogTitle="@string/pref_dialog_title"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:defaultValue="@string/pref_syncConnectionTypes_entries" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_launch_storage_title"
        android:key="pref_key_storage_launch_settings">
        <PreferenceScreen
            android:key="button_voicemail_category_key"
            android:title="@string/pref_screen_title"
            android:summary="@string/pref_screen_summ"
            android:persistent="false">
            <CheckBoxPreference
                android:key="screen_check_box_key"
                android:title="@string/pref_screen_checkbox_title"
                android:summary="@string/pref_screen_checkbox_summ"
                android:defaultValue="false" />
        </PreferenceScreen>
        <Preference android:title="Intent preference"
            android:summary="Launches an Activity from an Intent">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.example.com" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Preference attribute"
        android:key="pref_key_storage_attribute_settings">
        <CheckBoxPreference
            android:key="check_box_key1"
            android:title="Parent checkbox preference"
            android:summary="This is visually a parent"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="check_box_key2"
            android:dependency="check_box_key1"
            android:title="Child checkbox preference"
            android:summary="This is visually a child"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>